2010-04-11  Atsushi Enomoto  <atsushi@ximian.com>

	* XamlObjectReader.cs : basic implementation.
	* XamlReader.cs : implemented Skip().
	* XamlType.cs : hacked GetAllMembers() for XamlObjectReader work.
	* TypeExtensionMethods.cs : added an extension to get member value.

2010-04-10  Atsushi Enomoto  <atsushi@ximian.com>

	* XamlXmlWriter.cs : Process closing only once (disposing).
	  Close output only when required.

2010-04-10  Atsushi Enomoto  <atsushi@ximian.com>

	* TypeExtensionMethods.cs, XamlType.cs :
	  implement LookupCustomAttributeProvider() and use it.
	* XamlLanguage.cs : add internal const for xmlns ns.
	* XamlServices.cs : implement some.

2010-04-09  Atsushi Enomoto  <atsushi@ximian.com>

	* XamlMember.cs
	  XamlDirective.cs
	  XamlType.cs : implement TypeConverter support.

2010-04-09  Atsushi Enomoto  <atsushi@ximian.com>

	* TypeExtension.cs, TypeExtensionMethods.cs : renamed to avoid
	  confusion between Sys.Win.Markup.TypeExtension.

2010-04-09  Atsushi Enomoto  <atsushi@ximian.com>

	* TypeExtension.cs
	  XamlMember.cs
	  XamlDirective.cs
	  XamlType.cs
	  XamlLanguage.cs : ongoing implementation.

2010-04-09  Atsushi Enomoto  <atsushi@ximian.com>

	* XamlType.cs : implemented lots of members.
	* TypeExtension.cs : split out from above.

2010-04-08  Atsushi Enomoto  <atsushi@ximian.com>

	* XamlMember.cs, XamlDirective.cs :
	  Implemented lots of directive members.

2010-04-08  Atsushi Enomoto  <atsushi@ximian.com>

	* XamlDirective.cs
	  XamlLanguage.cs
	  XamlMember.cs
	  XamlType.cs : add more members and implement some.

2010-04-08  Atsushi Enomoto  <atsushi@ximian.com>

	* AmbientPropertyValue.cs
	  AttachableMemberIdentifier.cs
	  AttachablePropertyServices.cs
	  ChangeLog
	  IAmbientProvider.cs
	  IAttachedPropertyStore.cs
	  IDestinationTypeProvider.cs
	  INamespacePrefixLookup.cs
	  IRootObjectProvider.cs
	  IXamlIndexingReader.cs
	  IXamlLineInfo.cs
	  IXamlLineInfoConsumer.cs
	  IXamlNameProvider.cs
	  IXamlNameResolver.cs